<resources>
    <string name="app_name">ApplePie App</string>
    <string name="title_Loginscreen_Login">Login</string>
    <string name="title_LoginScreen_EmailPhoneNumber">Email/Phone number</string>
    <string name="title_LoginScreen_Password">Password</string>
    <string name="title_LoginScreen_ForgotPassword">Forgot Password?</string>
    <string name="title_login_screen_orSigninwith">Or sign in with</string>
    <string name="title_Login_Signupnow">Sign up now</string>
    <string name="title_Login_Screen_Donothaveanaccount">Haven’t got an account?</string>
    <string name="title_CreateAccount">Create Account</string>
    <string name="title_Login_FullName">Full Name</string>
    <string name="title_Account_Phonenumber">Phone Number</string>
    <string name="title_login_screen_otpverification">VERIFY CODE</string>
    <string name="title_login_screen_verifytophone">Enter the code sent to the phone number\n</string>
    <string name="title_login_didntreceive">Didn\'t receive the OTP?</string>
    <string name="title_login_resend">Resend</string>
    <string name="msg_enter_full_otp">Please enter the full OTP code</string>
    <string name="msg_resend_sent">Verification code resent</string>
    <string name="msg_otp_result">Verification code: %1$s</string>
    <!-- Login messages -->
    <string name="login_fill_info">Please fill in all the information</string>
    <string name="login_success">Login successful!</string>
    <string name="login_failed">Incorrect username or password</string>
    <string name="title_activity_product">Product</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="editFindProduct">Find product</string>
    <string name="titleFlashsale">FLASH SALE</string>
    <string name="title_profile">PROFILE</string>
    <string name="title_setting">SETTING</string>
    <string name="title_paymentmethod">PAYMENT METHODS</string>
    <string name="title_add_new_card">Add New Card</string>
    <string name="title_credit_debit_card"><![CDATA[Credit & Debit card]]></string>
    <string name="title_change_password">CHANGE PASSWORD</string>
    <string name="title_current_password">Current password</string>
    <string name="title_new_password">New password</string>
    <string name="title_comfirm_new_password">Confirm new password</string>
    <string name="title_your_profile">Your profile</string>
    <string name="title_payment_methods">Payment methods</string>
    <string name="title_my_orders">My orders</string>
    <string name="title_settings">Settings</string>
    <string name="title_help_center">Help center</string>
    <string name="title_Policy">Policy</string>
    <string name="title_logout">Log out</string>
    <string name="title_notification_settings">Notification settings</string>
    <string name="title_password_manager">Password manager</string>
    <string name="title_delete_account">Delete account</string>
    <string name="title_help_center_header">HELP CENTER\n</string>
    <string name="title_policy">POLICY</string>
    <string name="title_my_orders1">MY ORDERS</string>
    <string name="quantity_format">Quantity: %1$d</string>
    <string name="price_format">%1$s VND</string>
    <string name="title_my_cart">MY CART</string>
    <string name="title_apply">Apply</string>
    <string name="title_checkout">CHECK OUT</string>
    <string name="title_have_account">Have account already?</string>
    <string name="title_signinnow">Sign in now</string>

</resources>