<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".UI.LoginScreen2">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/vollkorn"
        android:text="@string/title_Loginscreen_Login"
        android:textColor="@color/textcolor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/nunito_medium"
        android:hint="@string/title_LoginScreen_EmailPhoneNumber"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/nunito_medium"
        android:hint="@string/title_LoginScreen_Password"
        android:inputType="textPassword"
        android:padding="14dp" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/title_LoginScreen_ForgotPassword"
        android:textColor="#B38A44"
        android:textSize="14sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#823800"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/title_Loginscreen_Login"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtOrLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/title_login_screen_orSigninwith"
        android:textColor="#888" />

    <LinearLayout
        android:id="@+id/socialLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/btnGoogle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"

            android:src="@drawable/ic_google" />

        <ImageView
            android:id="@+id/btnFacebook"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:src="@drawable/ic_facebook" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/title_Login_Screen_Donothaveanaccount" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/title_Login_Signupnow"
        android:textColor="#B38A44"
        android:textStyle="italic" />

</LinearLayout>
