<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white">

    <!-- ========== PHẦN HEADER ========== -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_header"
        android:layout_width="411dp"
        android:layout_height="91dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Tiêu đề "Payment Method" -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/vollkorn"
            android:text="@string/title_paymentmethod"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

        <!-- Nút back -->
        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_backbutton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- ========== TIÊU ĐỀ PHẦN THẺ ==========
         (Credit / Debit Card Section Title)
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_payment_input"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/title_credit_debit_card"
        android:textColor="@color/textcolor"
        android:textSize="20sp" />
    </LinearLayout>

    <!-- ========== PHẦN NHẬP THẺ MỚI ========== -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_payment_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/profile_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0">

        <!-- Icon thẻ tín dụng -->
        <ImageView
            android:id="@+id/paymentIcon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_paymentmethods"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/edt_paymentInput2"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!-- Ô nhập số thẻ mới -->
        <EditText
            android:id="@+id/edt_paymentInput2"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/title_add_new_card"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/paymentIcon2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
