<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white">

    <!-- HEADER -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_header"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/vollkorn"
            android:text="@string/title_change_password"
            android:textColor="@color/textcolor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_backbutton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- CURRENT PASSWORD -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/profile_header">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/title_current_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint=""
            app:endIconMode="password_toggle"
            app:endIconTint="@color/lightbrown">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/nunito_medium"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textColor="@color/textcolor"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginRight="20dp"
            android:text="@string/title_LoginScreen_ForgotPassword"
            android:textColor="#B38A44"
            android:textSize="14sp"
            android:textStyle="italic" />
    </LinearLayout>

    <!-- NEW PASSWORD -->
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/title_new_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint=""
            app:endIconMode="password_toggle"
            app:endIconTint="@color/lightbrown">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/nunito_medium"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textColor="@color/textcolor"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- CONFIRM PASSWORD -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linearLayout3">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/title_comfirm_new_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint=""
            app:endIconMode="password_toggle"
            app:endIconTint="@color/lightbrown">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/nunito_medium"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textColor="@color/textcolor"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- BUTTON -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnLogin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/brown"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/title_change_password"
            android:textColor="@android:color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
